--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
-# Compiled class file
+# Compiled class files
 *.class
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# Package files
 *.jar
 *.war
 *.nar
@@ -19,18 +10,62 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Log files
+*.log
+logs/
+npm-debug.log
+yarn-error.log
+
+# Virtual machine crash logs (see http://www.java.com/en/download/help/error_hotspot.xml)
 hs_err_pid*
 replay_pid*
 
-.idea/
-target/
-src/main/frontend/generated
-.DS_Store
-*.DS_Store
-**/.DS_Store
+# BlueJ files
+*.ctxt
 
-/src/main/bundles/
-/.project
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Gradle
+.gradle/
+build/
+!gradle/wrapper/gradle-wrapper.jar
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+# Groovy files
+*.groovy
+
+# TypeScript / JavaScript
+node_modules/
+*.tsbuildinfo
+
+# IDEs and editors
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+.vscode/
+
+# Eclipse project files
+.project
 /.factorypath
 /.classpath
+
+# Additional generated directories
+src/main/frontend/generated
+/src/main/bundles/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Others
+.env
