--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,21 @@
+# Allgemeine Spring-Konfiguration
 server.port=${SERVER_PORT:9090}
-logging.level.org.atmosphere = warn
-spring.mustache.check-template-location = false
+logging.level.org.atmosphere=warn
 
-# Launch the default browser when starting the application in development mode
+# Vaadin-spezifische Konfiguration (Entwicklung)
 vaadin.launch-browser=true
-# To improve the performance during development.
-# For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.allowed-packages=com.vaadin,org.vaadin,dev.hilla,io.github.ollama4j
-spring.jpa.defer-datasource-initialization = true
 
-ollama.url=${OLLAMA_HOST_ADDR:http://localhost:11434}
+# Datenbank und Persistenz
+spring.jpa.defer-datasource-initialization=true
 
-ollama.request-timeout-seconds=600
-
+# Datei-Upload-Konfiguration (Spring)
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+# Ollama-spezifische Konfiguration
+ollama.url=${OLLAMA_HOST_ADDR:http://localhost:11434}
+ollama.request-timeout-seconds=600
+
+# Sonstige Einstellungen
+spring.mustache.check-template-location=false
